# socratic-method

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/release/: SKILL.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  tag-release.yml
evals/: graders.py  judge-rubric.md  run_eval.py
evals/fixtures/: tech-talk-series-20260704.md
evals/reports/20260720-173028/: summary.json  summary.md
evals/reports/20260720-173028/N1/: brief.md  graders.json  judge.json  transcript.json
evals/reports/20260720-173028/O1/: brief.md  graders.json  judge.json  transcript.json
evals/reports/20260720-175544/: summary.json  summary.md
evals/reports/20260720-175544/E1/: brief.md  graders.json  judge.json  transcript.json
evals/reports/20260720-175544/N3/: brief.md  graders.json  (+2 more)
evals/reports/20260720-223911/: summary.json  summary.md
evals/reports/20260720-225433/: summary.json  summary.md
evals/reports/20260720-232658/: summary.json  summary.md
evals/reports/20260721-000430/: summary.json  summary.md
evals/scenarios/: e1-stress-stop.yaml  e2-disputed-restatement.yaml  n1-stress-contradiction.yaml  n2-develop-aporia.yaml  n3-develop-quick.yaml  n4-stress-falsification.yaml  o1-out-of-scope.yaml
src/socratic_method/: __init__.py  cli.py  installer.py  validator.py
src/socratic_method/assets/: SKILL.md  idea-brief-v1.schema.json
tests/: conftest.py  test_assets.py  test_cli.py  test_detection.py  test_graders.py  test_installer.py  test_run_eval.py  test_validator.py
(+74 files in other folders)
